# tiacad

./: .gitignore  CHANGELOG.md  CODE_QUALITY_SUMMARY.md  PROJECT.md  README.md  RELEASE_NOTES_V3.md  SCHEMA_UPDATE_V3_SUMMARY.md  SKIPPED_TESTS_AUDIT.md  YAML_REFERENCE.md  benchmark_performance.py  fix_pattern_api.py  pyproject.toml  pytest.ini  requirements.txt  tiacad-schema.json
.github/workflows/: tests.yml  visual-regression.yml
docs/: AUTO_REFERENCES_GUIDE.md  CGA_INTEGRATION_DESIGN.md  CURRENT_STATUS.md  DOCUMENTATION_MAP.md  KNOWN_ISSUES.md  MENTAL_MODELS_AND_LANGUAGE.md  MIGRATION_GUIDE_V3.md  SIL_INTEGRATION.md  TESTING_CONFIDENCE_PLAN.md  TESTING_GUIDE.md  TESTING_QUICK_REFERENCE.md  TESTING_ROADMAP.md  TIACAD_EVOLUTION_ROADMAP.md  V3_IMPLEMENTATION_STATUS.md
docs/user/: TUTORIAL.md  YAML_REFERENCE.md
examples/: auto_references_box_stack.yaml  auto_references_cylinder_assembly.yaml  auto_references_rotation.yaml  auto_references_with_offsets.yaml  awesome_guitar_hanger.3mf  awesome_guitar_hanger.stl  awesome_guitar_hanger.yaml  awesome_guitar_hanger_README.md  bottle_revolve.yaml  bracket_with_hole.yaml  chamfered_bracket.yaml  color_demo.yaml  color_showcase.yaml  error_demo.yaml  formats_demo.yaml  guitar_hanger_named_points.3mf  guitar_hanger_named_points.yaml  guitar_hanger_with_holes.yaml  lego_brick_2x1.yaml  lego_brick_3x1.yaml  mounting_plate_with_bolt_circle.yaml  multi_material_demo.3mf  multi_material_demo.yaml  multi_material_enclosure.yaml  pipe_sweep.yaml  pipe_sweep_simple.yaml  references_demo.yaml  rounded_mounting_plate.3mf  rounded_mounting_plate.yaml  simple_box.3mf  simple_box.yaml  simple_extrude.yaml  simple_guitar_hanger.yaml  text_operation_emboss_simple.yaml  text_operation_multi_face.yaml  text_operation_product_label.yaml  text_primitive_sign.yaml  transition_loft.3mf  transition_loft.yaml  v3_bracket_mount.yaml  (+4 more)
output/: bottle_test.stl
scripts/: update_visual_references.py
tiacad_core/: __init__.py  cli.py  spatial_resolver.py
tiacad_core/exporters/: threemf_exporter.py
tiacad_core/geometry/: base.py  cadquery_backend.py  mock_backend.py
tiacad_core/parser/: __init__.py  appearance_builder.py  color_parser.py  color_utils.py  extrude_builder.py  finishing_builder.py  gusset_builder.py  hull_builder.py  loft_builder.py  operations_builder.py  parts_builder.py  pattern_builder.py  sweep_builder.py  text_builder.py  tiacad_parser.py  yaml_with_lines.py
tiacad_core/testing/: __init__.py  dimensions.py  visual_regression.py
tiacad_core/tests/: VISUAL_REGRESSION_README.md  conftest.py  (+9 more)
(+29 files in other folders)
